# agora-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
Agora-BackEnd/: Callback Google.yml  Health DB.yml  Subir Evidencia.yml  TestDEauth.yml  TestGoogleAuth.yml  TestMicrosoftAuth.yml  opencollection.yml  push-token.yml  welcome msg.yml
Agora-BackEnd/environments/: Develop.yml  Localhost.yml  Main.yml
alembic/: env.py
alembic/versions/: 140bbf222fef_merge_multiple_heads.py  1592935c8aeb_add_category_to_complaint.py  1a83bf85c513_merge_club_message_head.py  1c429b08be67_merge_heads_before_making_status_.py  21e0e545d40c_create_complaint_models.py  2448c427c791_add_notification_model.py  29f0ff63081f_add_is_private_to_club_club_join_.py  2a3b4c5d6e7f_make_complaint_status_nullable_for_suggestions.py  3f4ac2afbc96_rename_club_image_to_profile_image_and_.py  4332daa82824_create_auth_user_session_staff_.py  43a070ebdf5a_merge_heads_before_private_clubs.py  5c9ec474d14a_add_club_posts_comments_likes_and_.py  5d05ddad2953_add_clubs_enum_values_to_notification_.py  6f3f3fb31d8b_add_club_message_table.py  7569c1faefc2_add_cascade_delete_to_club_relations.py  874ee734c740_initial_tables.py  8bd48f2cf7a1_create_career_table_and_user_fk.py  8dcac940666d_update_complaintcategory_enum.py  8f2b1d4c9a7e_seed_default_roles.py  a0b652c77c23_add_club_models.py  a66424802494_add_type_id_building_and_classroom_to_.py  af268a54fcda_add_club_event_table.py  b3e1f9a72c50_add_refresh_token_to_session.py  c1f3a2b4e5d6_add_academic_to_complaintcategory_enum.py  c8d9e0f1a2b3_seed_building_photos.py  d1e2f3a4b5c6_update_building_image_urls_to_webp.py  d57874f063a3_merge_cascade_delete_and_club_message_.py  dad232aa3c23_create_campus_models.py  ddd4803ec953_merge_heads.py  e7c2d1f8a349_add_session_lifecycle_columns.py  f2adf8fdec5d_make_club_id_category_nullable.py  (+1 more)
app/: main.py
bruno/: 01-Auth-Test-Login.bru  01-Welcome.bru  02-Test.bru  03-Health-Check.bru  04-Health-DB.bru  05-Auth-Google-Mobile-Login.bru  06-Auth-Microsoft-Mobile-Login.bru  07-Auth-Get-Me.bru  08-Users-Get-Me.bru  09-Users-Admin.bru  10-Users-Staff.bru  11-Save-Push-Token.bru  12-Complaints-Create.bru  12b-Complaints-Create-With-Images.bru  13-Complaints-Get-My.bru  14-Complaints-Get-Detail.bru  bruno.json
tests/: conftest.py  test_auth_oauth.py  test_auth_service.py  test_main.py  test_setup.py
(+145 files in other folders)
