[project]
name = "agora-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.0",
    "aioboto3>=13.0.0",
    "cryptography>=46.0.5",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "google-auth>=2.49.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "requests>=2.33.0",
    "redis>=7.2.0",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"] # Errores, Imports, Nomenclatura, etc.
ignore = ["B008"]  # FastAPI Depends() in default arguments is intentional

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501", "I001", "UP007", "UP035"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
timeout = 30
addopts = [
    "--cov=.",              # Mide la raíz del proyecto
    "--cov-report=term-missing", # Muestra líneas faltantes en consola
    "--cov-report=html"     # Genera un reporte visual en una carpeta
]
